--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "sass styles/scss:styles/css"
+    "build": "sass styles/scss:styles/css",
+    "watch": "sass --watch styles/scss:styles/css"
   },
   "repository": {
     "type": "git",
