--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "sass styles/scss:styles/css",
-    "watch": "sass --watch styles/scss:styles/css"
+    "watch": "sass --watch --no-source-map styles/scss:styles/css"
   },
   "repository": {
     "type": "git",
